# BigInt

./: CMakeLists.txt  README.md  main.cpp  stdafx.h
grpc/client/: client.py  gen_stub.py  requirements.txt
grpc/server/: build.gradle
grpc/server/gradle/wrapper/: gradle-wrapper.properties
grpc/server/src/main/kotlin/: Main.kt
grpc/server/src/main/proto/: simple.proto
